2009-09-17  Murray Cumming  <murrayc@murrayc.com>

	Require a recent pangomm.

	* configure.ac: Require a recent pangomm version, because gtkmmconfig.h 
	now requires the new pangommconfig.h. This was a (correct) side-effect 
	of using the new mm-common build system, I think. Bug #593049 
	(Frederic Peters).

2009-09-15  Daniel Elstner  <danielk@openismus.com>

	Correct misuse of container handle (bgo #586626)

	* gtk/src/clipboard.{ccg,hg} (Clipboard::wait_for_targets): Create
	an intermediate array of allocated C strings and transfer ownership
	on return, instead of trying to returned a handle to a container
	with local scope.  (Based on patch by Peter Clifton.)
	(SignalProxy_TargetsReceived_gtk_callback): Correct another misuse
	of the container handles similar to the above, except for the crash.
	(SignalProxy_RichTextReceived_gtk_callback): Simplify the code and
	plug a memory leak in the event of an exception.

2009-09-07  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/window.hg: Added set_icon_name().

2009-09-07  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/enums.hg: Include gtkmmconfig.h because we use 
	 GTKMM_MAEMO_EXTENSIONS_ENABLED.

2.17.11:

2009-09-06  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/infobar.hg: Added class documentation.

2009-09-06  Murray Cumming  <murrayc@murrayc.com>

	Gdk::Window: Wrapped new methods.

	* gdk/src/gdk_methods.defs: Regenerated.
	* gdk/src/window.[hg|cc]: Added redirect_to_drawable(), 
	remove_redirection(), geometry_changed(), get_root_coords(), restack().

2009-09-06  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/widget.[hg|ccg]: Put the usual ifdefs around the newly 
	deprecated methods.

2009-09-06  Murray Cumming  <murrayc@murrayc.com>

	Added new getters and a setter.

	* gtk/src/gtk_methods.defs: Regenerated.
	* gtk/src/range.hg: Added get/set_flippable.
	* gtk/src/widget.[hg]: Added get_is_toplevel(), get_is_drawable(), 
	get/set_receives_default(), wrapping the new C functions, 