@@ -1,3 +1,10 @@
+2009-09-17  Daniel Elstner  <danielk@openismus.com>
+
+	Update Doxygen configuration for Doxygen 1.6.1
+
+	* docs/reference/Doxyfile.in: Update configuration for Doxygen 1.6.1.
+	(SORT_MEMBERS_CTORS_1ST): Set to YES.
+
 2009-09-17  Murray Cumming  <murrayc@murrayc.com>
 
 	Require a recent pangomm.
